--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -154,7 +154,7 @@
     left: 18px;
     right: 18px;
     height: 3px;
-    background: #FFDC00;
+    background: #ff5a79;
     border-radius: 50px
 }
 
@@ -165,7 +165,7 @@
     width: 100%;
     height: 3px;
     border-radius: 50px;
-    background-color: #FFDC00;
+    background-color: #ff5a79;
     content: ""
 }
 
@@ -236,7 +236,7 @@
 }
 
 .modal__content {
-    background-color: #FFDC00;
+    background-color: #ff5a79;
     height: 300px;
     width: 200px;
     margin: 20px auto
@@ -248,7 +248,7 @@
 
 .c-hamburger__input:checked ~ .modal {
     opacity: 1;
-    background-color: #FFDC00;
+    background-color: #ff5a79;
     visibility: visible
 }
 
@@ -681,7 +681,7 @@ main.wrap {
     color: #fff;
     font-size: 2.5em;
     font-family: 'Share Tech Mono', monospace;
-    z-index: 1;
+    z-index: 0;
     position: relative;
 }
 
