--- a/src/main/resources/templates/_includes/metas.html
+++ b/src/main/resources/templates/_includes/metas.html
@@ -15,6 +15,7 @@
 
 <link rel="stylesheet" href="${cdn}/static/css/hint.min.css"/>
 <link rel="stylesheet" href="${cdn}/static/mdui-v0.3.0/css/mdui.min.css"/>
+<link rel="stylesheet" href="/static/css/loaders.min.css"/>
 #if(isDev)
 <link rel="stylesheet" href="/static/css/main.css?v=${version}"/>
 #else
