:lipstick: landscaping style

--- a/src/main/resources/templates/_includes/header.html
+++ b/src/main/resources/templates/_includes/header.html
@@ -5,15 +5,15 @@
     </a>
     #if(is_home)
     <div class="header-buttons mdui-center" style="margin: 0 auto;">
-        <div class="mdui-container-fluid">
-            <div class="mdui-col-xs-4"></div>
-            <div id="cplayer" class="mdui-col-xs-2" style="z-index: 0;"></div>
-            <div class="mdui-col-xs-2 mdui-m-l-4">
+        <div class="mdui-container">
+            <div class="mdui-col-xs-6 mdui-text-right mdui-m-l-4">
+                <div id="cplayer" style="z-index: -1;"></div>
+            </div>
+            <div class="mdui-col-md-5 mdui-col-sm-12 mdui-text-left">
                 <a class="btn btn-green talk-about" mdui-tooltip="{content: '我的2017想告诉全世界'}" style="font-weight: 300; margin: 0;">
                     🤔 我有话说
                 </a>
             </div>
-            <div class="mdui-col-xs-4"></div>
         </div>
     </div>
     #else
