--- a/src/main/resources/templates/_includes/metas.html
+++ b/src/main/resources/templates/_includes/metas.html
@@ -12,10 +12,11 @@
 <meta name="robots" content="index, follow">
 <meta name="msapplication-TileColor" content="#FFDD67">
 <meta name="theme-color" content="#FFDD67">
+<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 
 <link rel="stylesheet" href="${cdn}/static/css/hint.min.css"/>
 <link rel="stylesheet" href="${cdn}/static/mdui-v0.3.0/css/mdui.min.css"/>
-<link rel="stylesheet" href="/static/css/loaders.min.css"/>
+<link rel="stylesheet" href="${cdn}/static/css/loaders.min.css"/>
 #if(isDev)
 <link rel="stylesheet" href="/static/css/main.css?v=${version}"/>
 #else
