--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="row">
-        <article id="{{ item.id }}" class="emoji mdui-col-xs-4" v-for="item in records">
+        <article id="{{ item.id }}" class="emoji mdui-col-md-4 mdui-col-sm-12" v-for="item in records">
             <div class="profile-card">
                 <header class="profile-header">
                     <img :src="'${cdn}/static/img/random/' + item.picid + '.jpg'">
