:lipstick: optimize code

--- a/src/main/resources/templates/_includes/footer.html
+++ b/src/main/resources/templates/_includes/footer.html
@@ -15,7 +15,7 @@
                 <nav>
                     <a href="/about">关于</a>
                     <a href="/show">统计</a>
-                    <a href="https://github.com/biezhi">GitHub</a>
+                    <a href="https://github.com/biezhi/bye-2017">GitHub</a>
                 </nav>
             </div>
         </div>
