--- a/src/main/resources/templates/_includes/header.html
+++ b/src/main/resources/templates/_includes/header.html
@@ -3,6 +3,7 @@
     <a href="/">
         <h1 class="bye-title" data-content="再见👋 我的2017">再见👋 我的2017</h1>
     </a>
+    <p style="font-family: Georgia,'Times New Roman',STKaiti,BiauKai,KaiTi,'DFKai-SB','KaiTi_GB2312',serif; font-size: 22px; color: #fff9c4; ">写一份年终总结，给未来的自己</p>
     #if(is_home)
     <div class="header-buttons mdui-center" style="margin: 0 auto;">
         <div class="mdui-container">
