--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>再见！我的2017 - 2017年终总结，给未来的自己</title>
+    <title>再见！我的2017 - 写给未来的自己</title>
     #include("./_includes/metas.html")
     <link href="${cdn}/static/css/select2.css" rel="stylesheet"/>
 </head>
