:lipstick: optimize code

--- a/src/main/resources/templates/_includes/metas.html
+++ b/src/main/resources/templates/_includes/metas.html
@@ -23,3 +23,13 @@
 <link rel="stylesheet" href="${cdn}/static/css/main.min.css?v=${version}"/>
 #end
 <script type="text/javascript" src="${cdn}/static/js/jquery.min.js"></script>
+
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?b951bb2e4423ab586bdbe30c027962f5";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
