--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
         </article>
     </div>
     <div class="row center-xs clearfix mdui-center" v-if="records.length > 11">
-        <button class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme-accent" @click="loadMore">加载更多</button>
+        <button class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme-accent" @click="loadMore">{{ loadText }}</button>
     </div>
 </main>
 #include("./_includes/footer.html")
