:lipstick: set the picture center

--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -13,35 +13,35 @@
     <div class="mdui-container">
         <div class="mdui-col-xs-12" style="text-align: center; margin: 0 auto;">
             <h1>全部统计</h1>
-            <a href="javascript:void(0);"><img src="/static/img/wordcloud/topics.png"/></a>
+            <a href="javascript:void(0);"><img src="/static/img/wordcloud/topics.png" style="max-width: 100%;"/></a>
         </div>
         <div class="mdui-col-xs-12" style="text-align: center; margin: 0 auto;">
             <h1>感情主题</h1>
-            <a href="javascript:void(0);"><img src="/static/img/wordcloud/feeling.png"/></a>
+            <a href="javascript:void(0);"><img src="/static/img/wordcloud/feeling.png" style="max-width: 100%;"/></a>
         </div>
         <div class="mdui-col-xs-12" style="text-align: center; margin: 0 auto;">
             <h1>读书主题</h1>
-            <a href="javascript:void(0);"><img src="/static/img/wordcloud/book.png"/></a>
+            <a href="javascript:void(0);"><img src="/static/img/wordcloud/book.png" style="max-width: 100%;"/></a>
         </div>
         <div class="mdui-col-xs-12" style="text-align: center; margin: 0 auto;">
             <h1>音乐主题</h1>
-            <a href="javascript:void(0);"><img src="/static/img/wordcloud/music.png"/></a>
+            <a href="javascript:void(0);"><img src="/static/img/wordcloud/music.png" style="max-width: 100%;"/></a>
         </div>
         <div class="mdui-col-xs-12" style="text-align: center; margin: 0 auto;">
             <h1>技术主题</h1>
-            <a href="javascript:void(0);"><img src="/static/img/wordcloud/technology.png"/></a>
+            <a href="javascript:void(0);"><img src="/static/img/wordcloud/technology.png" style="max-width: 100%;"/></a>
         </div>
         <div class="mdui-col-xs-12" style="text-align: center; margin: 0 auto;">
             <h1>工作主题</h1>
-            <a href="javascript:void(0);"><img src="/static/img/wordcloud/job.png"/></a>
+            <a href="javascript:void(0);"><img src="/static/img/wordcloud/job.png" style="max-width: 100%;"/></a>
         </div>
         <div class="mdui-col-xs-12" style="text-align: center; margin: 0 auto;">
             <h1>身体健康</h1>
-            <a href="javascript:void(0);"><img src="/static/img/wordcloud/health.png"/></a>
+            <a href="javascript:void(0);"><img src="/static/img/wordcloud/health.png" style="max-width: 100%;"/></a>
         </div>
         <div class="mdui-col-xs-12" style="text-align: center; margin: 0 auto;">
             <h1>2018展望</h1>
-            <a href="javascript:void(0);"><img src="/static/img/wordcloud/outlook.png"/></a>
+            <a href="javascript:void(0);"><img src="/static/img/wordcloud/outlook.png" style="max-width: 100%;"/></a>
         </div>
     </div>
 
